@@ -1,5 +1,6 @@
 Version 3.8
 
+* IMPROVEMENT: Added KSI_AggregationHashChain_aggregate function.
 * IMPROVEMENT: KSI_LIST may contain NULL values.
 * BUGFIX: Certificate and publication records are not mandatory for publications file.
 * IMPROVEMENT: Integration tests configuration file error handling improved.
